[package]
name = "netboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
