[package]
name = "netboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
mac_address = "1.1.4"
nom = "7.1.3"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7.8", features = ["net", "codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
